add options and readme